--- a/.github/workflows/manual-update-durations.yml
+++ b/.github/workflows/manual-update-durations.yml
@@ -169,6 +169,5 @@ jobs:
           # Example: Run distributed test using mpirun across all hosts
           # mpirun --host $ALL_HOSTS --mca btl self,tcp --mca btl_tcp_if_include enp10s0f1np1 --tag-output --allow-run-as-root \
           #   pytest tests/your_multihost_test.py
-
+          pytest -svv tests/torch/multi_host/experimental/test_multihost_basic.py -k "dual_bh_quietbox"
           # Add your multi-host test commands here
-          echo "Tests completed successfully!"
