--- a/.github/workflows/call-release-tests.yml
+++ b/.github/workflows/call-release-tests.yml
@@ -17,7 +17,7 @@ jobs:
       ref: main
       project-filter: tt-xla
 
-  perf-benchmark:
+  perf-benchmark-n150:
     uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
     secrets: inherit
     with:
@@ -26,6 +26,18 @@ jobs:
       project: tt-xla
       sh-runner: false
       skip-device-perf: false
+      runs-on-filter: n150
+
+  perf-benchmark-llmbox:
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
+    secrets: inherit
+    with:
+      docker-image: ${{ inputs.release_docker_image }}
+      ref: main
+      project: tt-xla
+      sh-runner: false
+      skip-device-perf: false
+      runs-on-filter: llmbox
 
   demo-test:
     uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@main
