--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -3,109 +3,38 @@ name: Run Test Single
 on:
   workflow_dispatch:
     inputs:
-      dir:
-        description: 'Path passed to pytest'
+      release_docker_image:
+        description: 'Name of the release Docker image'
+        type: string
         required: true
-        type: string
-      mark:
-        description: 'Mark passed to pytest (-m)'
-        required: false
-        type: string
-      contains:
-        description: 'Execute test that contains the specified string (-k)'
-        required: false
-        type: string
-      args:
-        description: 'Additional arguments passed to pytest'
-        required: false
-        type: string
-      runs_on:
-        description: 'Choose runners for running test'
-        required: true
-        type: choice
-        options:
-          - 'n150'
-          - 'n300'
-          - 'p150'
-          - 'n300-llmbox'
-          - 'llmbox-1'
-          - 'llmbox-2'
-      shared_runners:
-        description: 'Run test on the CIv2 runner'
-        required: false
-        default: false
-        type: boolean
-      parallel_groups:
-        description: 'Number of parallel runners for test execution'
-        required: true
-        default: '1'
-        type: choice
-        options:
-          - '1'
-          - '2'
-          - '3'
-          - '4'
-          - '5'
-          - '8'
-          - '10'
-      mlir_override:
-          description: 'Git SHA of commit in tenstorrent/tt-mlir'
-          required: false
-          type: string
 
 permissions:
+  contents: write
+  actions: write
+  id-token: write
   packages: write
   checks: write
 
-run-name: 'Test ( Dir: ${{ inputs.dir }} - Mark: ${{ inputs.mark }} - Run-on: ${{ inputs.runs_on }} - Shared runner: ${{ inputs.shared_runners }} )'
-
 jobs:
-  build-image:
-    uses: ./.github/workflows/call-build-docker.yml
+  perf-benchmark-n150:
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
     secrets: inherit
     with:
-      mlir_override: ${{ inputs.mlir_override }}
+      docker-image: ${{ inputs.release_docker_image }}
+      ref: main
+      project: tt-xla
+      sh-runner: false
+      skip-device-perf: false
+      runs-on-filter: n150
+      fail-notify: true
 
-  build-ttxla:
-    needs: build-image
-    uses: ./.github/workflows/call-build.yml
+  perf-benchmark-llmbox:
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
     secrets: inherit
     with:
-      docker_image: ${{ needs.build-image.outputs.docker-image }}
-      mlir_override: ${{ inputs.mlir_override }}
-
-  generate-test-config:
-    needs: build-ttxla
-    runs-on: ubuntu-latest
-    outputs:
-      test-config: ${{ steps.generate.outputs.test-config }}
-    steps:
-      - id: generate
-        run: |
-          TEST_CONFIG=$(jq -n \
-            --arg runs_on '${{ inputs.runs_on }}' \
-            --arg dir '${{ inputs.dir }}' \
-            --arg mark '${{ inputs.mark }}' \
-            --arg shared_runners '${{ inputs.shared_runners }}' \
-            --arg args '${{ inputs.args }}' \
-            --arg contains '${{ inputs.contains }}' \
-            --argjson parallel_groups '${{ inputs.parallel_groups }}' \
-            '[{"runs-on": $runs_on,"name": "Test","dir": $dir,"test-mark": $mark,"shared-runners": $shared_runners,"args": $args,"contains": $contains,"parallel-groups": $parallel_groups}]')
-
-          echo $TEST_CONFIG
-
-          echo "test-config=$(echo "$TEST_CONFIG" | jq -c)" >> $GITHUB_OUTPUT
-
-  test:
-    if: always() && !cancelled() && inputs.preset != 'tt_forge_models'
-    uses: ./.github/workflows/call-test.yml
-    needs: [ build-image, build-ttxla, generate-test-config ]
-    secrets: inherit
-    with:
-      test_suite: 'Custom'
-      test_suite_custom: ${{ needs.generate-test-config.outputs.test-config }}
-      docker_image: ${{ needs.build-image.outputs.docker-image-base }}
-      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      alchemist_artifact_name: ${{ needs.build-ttxla.outputs.alchemist_artifact_name }}
+      docker-image: ${{ inputs.release_docker_image }}
+      ref: main
+      project: tt-xla
+      sh-runner: false
+      skip-device-perf: false
+      runs-on-filter: llmbox
