--- a/tests/integrations/vllm_plugin/generative/test_config/model_configs.yaml
+++ b/tests/integrations/vllm_plugin/generative/test_config/model_configs.yaml
@@ -349,11 +349,11 @@ model_configs:
   vllm_sweep_bloom:
     model: bigscience/bloom-560m
     status: "known_failure_xfail"
-    reason: "ValueError: TT backend only supports V1."
+    reason: "Alibi slopes is not supported."
   vllm_sweep_bart:
     model: facebook/bart-base
     status: "known_failure_xfail"
-    reason: "ValueError: TT backend only supports V1."
+    reason: "Model architecture BartModel was supported in vLLM until v0.10.2, and is not supported anymore."
   vllm_sweep_chat_glm2:
     model: THUDM/chatglm2-6b
     status: "known_failure_xfail"
@@ -397,7 +397,7 @@ model_configs:
     max_model_len: 64
     max_num_batched_tokens: 64
     status: "known_failure_xfail"
-    reason: "ValueError: TT backend only supports V1."
+    reason: "TypeError: TTAttentionBackendImpl.__init__() got an unexpected keyword argument 'q_lora_rank'"
   vllm_sweep_exaone:
     model: LGAI-EXAONE/EXAONE-3.0-7.8B-Instruct
     status: "known_failure_xfail"
@@ -422,7 +422,7 @@ model_configs:
   vllm_sweep_gpt2:
     model: gpt2
     status: "known_failure_xfail"
-    reason: "ValueError: TT backend only supports V1."
+    reason: "'GPT2LMHeadModel' object has no attribute 'model'"
   vllm_sweep_gptbigcode: # TEST NEXT locally
     model: bigcode/starcoder
     status: "known_failure_xfail"
@@ -441,7 +441,7 @@ model_configs:
   vllm_sweep_granitemoe:
     model: ibm-granite/granite-3.0-1b-a400m-base
     status: "known_failure_xfail"
-    reason: "ValueError: TT backend only supports V1."
+    reason: "'_OpNamespace' '_moe_C' object has no attribute 'topk_softmax'"
   vllm_sweep_gritlm:
     model: parasail-ai/GritLM-7B-vllm
     status: "known_failure_xfail"
@@ -466,7 +466,8 @@ model_configs:
   vllm_sweep_jamba: # need to agree to terms to access
     model: ai21labs/AI21-Jamba-Mini-1.5
     status: "known_failure_xfail"
-    reason: "ValueError: TT backend only supports V1."
+    reason: "Gated huggingface model"
+    marks: [vllm_sweep]
   # vllm_sweep_llama:
   #   model: meta-llama/Llama-3.2-1B
   #   marks: [vllm_sweep]
@@ -502,7 +503,7 @@ model_configs:
   vllm_sweep_nemotron:
     model: nvidia/Minitron-8B-Base
     status: "known_failure_xfail"
-    reason: "ValueError: TT backend only supports V1."
+    reason: "Model is too large for single chip"
   vllm_sweep_olmo:
     model: allenai/OLMo-1B-hf
     status: "expected_passing"
@@ -528,8 +529,10 @@ model_configs:
   #   marks: [vllm_sweep]
   vllm_sweep_phi3:
     model: microsoft/Phi-3-mini-4k-instruct
+    gpu_memory_utilization: 0.006
     status: "known_failure_xfail"
-    reason: "ValueError: TT backend only supports V1."
+    reason: "(0.06 GiB KV cache is needed, which is larger than the available KV cache memory (0.02 GiB)"
+    marks: [vllm_sweep]
   # vllm_sweep_phi4:
   #   model: microsoft/phi-4
   #   marks: [vllm_sweep]
@@ -543,7 +546,7 @@ model_configs:
   vllm_sweep_persimmon:
     model: adept/persimmon-8b-base
     status: "known_failure_xfail"
-    reason: "ValueError: TT backend only supports V1."
+    reason: "Dynamo failed to run FX node with fake tensors: call_method view(*(FakeTensor(..., device='xla:0', size=(1, 128, 4096)), 1, 64, 64), **{}): got RuntimeError('shape '[1, 64, 64]' is invalid for input of size 524288')"
   vllm_sweep_qwen:
     model: Qwen/Qwen-7B
     status: "known_failure_xfail"
@@ -555,7 +558,7 @@ model_configs:
   vllm_sweep_qwen2moe:
     model: Qwen/Qwen1.5-MoE-A2.7B
     status: "known_failure_xfail"
-    reason: "ValueError: TT backend only supports V1."
+    reason: "RuntimeError: !at::functionalization::impl::isFunctionalTensor(t) INTERNAL ASSERT FAILED at '/pytorch/aten/src/ATen/FunctionalTensorWrapper.cpp':850, please report a bug to PyTorch. The composite op functionalization fallback expects its inputs all not to be functional tensors"
   vllm_sweep_stablelm:
     model: stabilityai/stablelm-3b-4e1t
     gpu_memory_utilization: 0.004
